--- a/projeto_final/fabio_mazza/projeto_final.ipynb
+++ b/projeto_final/fabio_mazza/projeto_final.ipynb
@@ -284,26 +284,42 @@
       "source": [
         "class MyDataset(torch.utils.data.Dataset):\n",
         "\n",
-        "  def __init__(self, img_ids: List[int], coco, transformations):\n",
+        "  def __init__(self, img_ids: List[int], coco, transformations, num_cats: int):\n",
         "    self.img_ids = img_ids\n",
         "    self.coco = coco\n",
         "    self.transformations = transformations\n",
+        "    self.num_cats = num_cats\n",
         "  \n",
         "  def __len__(self):\n",
         "    return len(self.img_ids)\n",
         "  \n",
         "  def __getitem__(self, idx):\n",
+        "    \n",
+        "    ## Inputs\n",
         "    imgs_info = self.coco.loadImgs(self.img_ids)\n",
         "    imgs_url = [imgs_info[i]['coco_url'] for i in range(len(imgs_info))]\n",
         "    imgs = [io.imread(imgs_url[i]) for i in range(len(imgs_url))]\n",
         "    self.inputs = [self.transformations(i) for i in imgs]\n",
         "\n",
-        "    return self.inputs[idx]#, self.targets[idx]"
+        "    ## Targets\n",
+        "    targets = torch.tensor([])\n",
+        "\n",
+        "    for id in self.img_ids:\n",
+        "      ann_id = self.coco.getAnnIds(id)\n",
+        "      anns = self.coco.loadAnns(ann_id)\n",
+        "      cat_idxs = [anns[i]['category_id'] for i in range(len(anns))]\n",
+        "      tgt = torch.zeros(self.num_cats)\n",
+        "      tgt[cat_idxs] = 1\n",
+        "      targets = torch.cat((targets, tgt), dim=0)\n",
+        "    \n",
+        "    self.targets = targets\n",
+        "\n",
+        "    return self.inputs[idx], self.targets[idx]"
       ],
       "metadata": {
         "id": "CMRmMJSvy3DQ"
       },
-      "execution_count": 18,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -319,9 +335,11 @@
       "cell_type": "code",
       "source": [
         "## Dataset\n",
+        "cat_ids = coco_inst_train.getCatIds()\n",
+        "num_cats = len(cat_ids)\n",
         "\n",
         "dummy_image_ids = [391895, 522418, 184613, 318219, 554625]\n",
-        "dummy_dataset = MyDataset(img_ids=dummy_image_ids, coco=coco_inst_train, transformations=transformations)\n",
+        "dummy_dataset = MyDataset(img_ids=dummy_image_ids, coco=coco_inst_train, transformations=transformations, num_cats=num_cats)\n",
         "dummy_loader = DataLoader(dummy_dataset, batch_size=5, shuffle=False)\n",
         "assert len(dummy_dataset) == 5\n",
         "print('Passou no assert de tamanho do dataset.')\n",
@@ -349,19 +367,23 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 235
         },
         "id": "q8HmCk6DyhIH",
-        "outputId": "3f464c4c-8da5-4750-c500-80ed36a9fd14"
+        "outputId": "7e65bcf3-5ba4-40e1-bebd-9c2789f48878"
       },
-      "execution_count": 45,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Passou no assert de tamanho do dataset.\n",
-            "Passou no assert de dataset\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-515b1e6736a3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m## Dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcat_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcoco_inst_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetCatIds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mnum_cats\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcat_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdummy_image_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m391895\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m522418\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m184613\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m318219\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m554625\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'coco_inst_train' is not defined"
           ]
         }
       ]
@@ -369,87 +391,89 @@
     {
       "cell_type": "code",
       "source": [
-        "first_batch_input.shape"
+        "cat_ids = coco_inst_train.getCatIds()\n",
+        "len(cat_ids)"
       ],
       "metadata": {
-        "id": "N3RkZwy-GhQB",
-        "outputId": "5a571610-c6ba-4f7f-cec1-1cc94ed8c120",
+        "id": "iU-z1jb9LJ-q",
+        "outputId": "8ecd988c-a295-4898-ead3-e14911ee9fd2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "torch.Size([5, 3, 224, 224])"
+              "80"
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 47
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "correct_first_batch_input.shape"
+        "ann_ids = coco_inst_train.getAnnIds([391895])\n",
+        "anns = coco_inst_train.loadAnns(ann_ids)\n",
+        "anns\n",
+        "cat_idxs = [anns[i]['category_id'] for i in range(len(anns))]\n",
+        "cat_idxs"
       ],
       "metadata": {
-        "id": "E8yyRHQxGoJj",
-        "outputId": "88533c34-7020-4cab-af64-4c9f97febdf0",
+        "id": "WKKcZnerRTc0",
+        "outputId": "690717f9-df06-4cea-96dc-f5c36bd5a2ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "torch.Size([15, 224, 224])"
+              "[4, 1, 1, 2]"
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 63
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "imgs_url"
+        "tgt = torch.zeros(80)\n",
+        "tgt[cat_idxs] = 1\n",
+        "tgt"
       ],
       "metadata": {
-        "id": "XoEmwre0E9ta",
-        "outputId": "b28fb0ce-a674-40f0-c8bf-499ca643d7e1",
+        "id": "bM40hNPWWdvy",
+        "outputId": "670d0bed-5df3-42e2-845a-b6ab04233504",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['http://images.cocodataset.org/train2017/000000391895.jpg',\n",
-              " 'http://images.cocodataset.org/train2017/000000522418.jpg',\n",
-              " 'http://images.cocodataset.org/train2017/000000184613.jpg',\n",
-              " 'http://images.cocodataset.org/train2017/000000318219.jpg',\n",
-              " 'http://images.cocodataset.org/train2017/000000554625.jpg',\n",
-              " 'http://images.cocodataset.org/train2017/000000391895.jpg',\n",
-              " 'http://images.cocodataset.org/train2017/000000522418.jpg',\n",
-              " 'http://images.cocodataset.org/train2017/000000184613.jpg',\n",
-              " 'http://images.cocodataset.org/train2017/000000318219.jpg',\n",
-              " 'http://images.cocodataset.org/train2017/000000554625.jpg']"
+              "tensor([0., 1., 1., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "        0., 0., 0., 0., 0., 0., 0., 0.])"
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 66
         }
       ]
     },
