--- a/projeto_final/fabio_mazza/projeto_final.ipynb
+++ b/projeto_final/fabio_mazza/projeto_final.ipynb
@@ -42,27 +42,27 @@
       ],
       "metadata": {
         "id": "OKy3TcT_v6-i",
-        "outputId": "18d0aec7-63d8-48c7-cf5c-52d789978989",
+        "outputId": "365c11b7-2807-434a-a539-7c7ea84184a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-06-25 20:12:53--  http://images.cocodataset.org/annotations/annotations_trainval2017.zip\n",
-            "Resolving images.cocodataset.org (images.cocodataset.org)... 52.217.175.17\n",
-            "Connecting to images.cocodataset.org (images.cocodataset.org)|52.217.175.17|:80... connected.\n",
+            "--2022-06-25 20:30:29--  http://images.cocodataset.org/annotations/annotations_trainval2017.zip\n",
+            "Resolving images.cocodataset.org (images.cocodataset.org)... 52.216.237.75\n",
+            "Connecting to images.cocodataset.org (images.cocodataset.org)|52.216.237.75|:80... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 252907541 (241M) [application/zip]\n",
             "Saving to: ‘annotations_trainval2017.zip’\n",
             "\n",
-            "annotations_trainva 100%[===================>] 241.19M  76.0MB/s    in 3.2s    \n",
+            "annotations_trainva 100%[===================>] 241.19M  86.9MB/s    in 2.8s    \n",
             "\n",
-            "2022-06-25 20:12:57 (76.0 MB/s) - ‘annotations_trainval2017.zip’ saved [252907541/252907541]\n",
+            "2022-06-25 20:30:32 (86.9 MB/s) - ‘annotations_trainval2017.zip’ saved [252907541/252907541]\n",
             "\n",
             "Archive:  /content/annotations_trainval2017.zip\n",
             "  inflating: annotations/instances_train2017.json  \n",
@@ -74,30 +74,30 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting transformers\n",
             "  Downloading transformers-4.20.1-py3-none-any.whl (4.4 MB)\n",
-            "\u001b[K     |████████████████████████████████| 4.4 MB 5.3 MB/s \n",
-            "\u001b[?25hCollecting huggingface-hub<1.0,>=0.1.0\n",
-            "  Downloading huggingface_hub-0.8.1-py3-none-any.whl (101 kB)\n",
-            "\u001b[K     |████████████████████████████████| 101 kB 10.1 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (2022.6.2)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from transformers) (4.11.4)\n",
-            "Collecting tokenizers!=0.11.3,<0.13,>=0.11.1\n",
-            "  Downloading tokenizers-0.12.1-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (6.6 MB)\n",
-            "\u001b[K     |████████████████████████████████| 6.6 MB 40.8 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from transformers) (2.23.0)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from transformers) (3.7.1)\n",
+            "\u001b[K     |████████████████████████████████| 4.4 MB 5.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.7/dist-packages (from transformers) (4.64.0)\n",
             "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (1.21.6)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.7/dist-packages (from transformers) (4.64.0)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.7/dist-packages (from transformers) (21.3)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from transformers) (2.23.0)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (2022.6.2)\n",
+            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from transformers) (4.11.4)\n",
             "Collecting pyyaml>=5.1\n",
             "  Downloading PyYAML-6.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (596 kB)\n",
-            "\u001b[K     |████████████████████████████████| 596 kB 39.4 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 596 kB 48.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from transformers) (3.7.1)\n",
+            "Collecting huggingface-hub<1.0,>=0.1.0\n",
+            "  Downloading huggingface_hub-0.8.1-py3-none-any.whl (101 kB)\n",
+            "\u001b[K     |████████████████████████████████| 101 kB 10.7 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.7/dist-packages (from transformers) (21.3)\n",
+            "Collecting tokenizers!=0.11.3,<0.13,>=0.11.1\n",
+            "  Downloading tokenizers-0.12.1-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (6.6 MB)\n",
+            "\u001b[K     |████████████████████████████████| 6.6 MB 28.1 MB/s \n",
             "\u001b[?25hRequirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from huggingface-hub<1.0,>=0.1.0->transformers) (4.1.1)\n",
             "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=20.0->transformers) (3.0.9)\n",
             "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->transformers) (3.8.0)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2.10)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (1.24.3)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2022.6.15)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2.10)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (3.0.4)\n",
             "Installing collected packages: pyyaml, tokenizers, huggingface-hub, transformers\n",
             "  Attempting uninstall: pyyaml\n",
             "    Found existing installation: PyYAML 3.13\n",
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "lQ1WD0YkBTTv"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -147,7 +147,7 @@
       "metadata": {
         "id": "Ck6nHDcbXEHE"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -168,20 +168,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "844f6316-387f-42e3-be88-208dcc938061"
+        "outputId": "52eebfb7-c623-4045-965c-35e555816af1"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "loading annotations into memory...\n",
-            "Done (t=20.09s)\n",
+            "Done (t=19.98s)\n",
             "creating index...\n",
             "index created!\n",
             "loading annotations into memory...\n",
-            "Done (t=0.61s)\n",
+            "Done (t=0.56s)\n",
             "creating index...\n",
             "index created!\n"
           ]
@@ -257,7 +257,7 @@
       "metadata": {
         "id": "Ws5eGA5FA0CJ"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -270,12 +270,7 @@
         "    self.coco = coco\n",
         "    self.transformations = transformations\n",
         "    self.num_cats = num_cats\n",
-        "  \n",
-        "  def __len__(self):\n",
-        "    return len(self.img_ids)\n",
-        "  \n",
-        "  def __getitem__(self, idx):\n",
-        "    \n",
+        "\n",
         "    ## Inputs\n",
         "    imgs_info = self.coco.loadImgs(self.img_ids)\n",
         "    imgs_url = [imgs_info[i]['coco_url'] for i in range(len(imgs_info))]\n",
@@ -294,15 +289,37 @@
         "      #tgt[cat_idxs] = 1\n",
         "      #targets = torch.cat((targets, tgt), dim=0)\n",
         "    \n",
-        "    #self.targets = targets\n",
+        "    self.targets = targets\n",
         "\n",
-        "    return self.inputs[idx]#, self.targets[idx]"
+        "\n",
+        "  def __len__(self):\n",
+        "    return len(self.img_ids)\n",
+        "  \n",
+        "  def __getitem__(self, idx):\n",
+        "    return self.inputs[idx], self.targets[idx]"
       ],
       "metadata": {
-        "id": "CMRmMJSvy3DQ"
+        "id": "CMRmMJSvy3DQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        },
+        "outputId": "51b110f7-ae0c-4416-bccb-bbe5cad8f8bb"
       },
-      "execution_count": 15,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-8e3bc41c1285>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mMyDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg_ids\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoco\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransformations\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_cats\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimg_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg_ids\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoco\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcoco\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -344,48 +361,10 @@
         "print('Passou no assert de dataset')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "q8HmCk6DyhIH",
-        "outputId": "ed8352f3-9dc8-402f-b5c5-e9ef88d32995"
+        "id": "q8HmCk6DyhIH"
       },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Passou no assert de tamanho do dataset.\n",
-            "391895 [4, 1, 1, 2]\n",
-            "522418 [1, 49, 61, 81]\n",
-            "184613 [21, 21, 21, 21, 21, 28, 21, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 21, 21, 21, 1]\n",
-            "318219 [1, 1, 74, 74, 76, 76, 74, 72, 72, 72, 74]\n",
-            "554625 [72, 72, 1, 1, 1, 72, 74, 74, 76, 76, 76, 72, 74, 74, 1, 1, 72, 74, 76]\n",
-            "391895 [4, 1, 1, 2]\n",
-            "522418 [1, 49, 61, 81]\n",
-            "184613 [21, 21, 21, 21, 21, 28, 21, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 21, 21, 21, 1]\n",
-            "318219 [1, 1, 74, 74, 76, 76, 74, 72, 72, 72, 74]\n",
-            "554625 [72, 72, 1, 1, 1, 72, 74, 74, 76, 76, 76, 72, 74, 74, 1, 1, 72, 74, 76]\n",
-            "391895 [4, 1, 1, 2]\n",
-            "522418 [1, 49, 61, 81]\n",
-            "184613 [21, 21, 21, 21, 21, 28, 21, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 21, 21, 21, 1]\n",
-            "318219 [1, 1, 74, 74, 76, 76, 74, 72, 72, 72, 74]\n",
-            "554625 [72, 72, 1, 1, 1, 72, 74, 74, 76, 76, 76, 72, 74, 74, 1, 1, 72, 74, 76]\n",
-            "391895 [4, 1, 1, 2]\n",
-            "522418 [1, 49, 61, 81]\n",
-            "184613 [21, 21, 21, 21, 21, 28, 21, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 21, 21, 21, 1]\n",
-            "318219 [1, 1, 74, 74, 76, 76, 74, 72, 72, 72, 74]\n",
-            "554625 [72, 72, 1, 1, 1, 72, 74, 74, 76, 76, 76, 72, 74, 74, 1, 1, 72, 74, 76]\n",
-            "391895 [4, 1, 1, 2]\n",
-            "522418 [1, 49, 61, 81]\n",
-            "184613 [21, 21, 21, 21, 21, 28, 21, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 21, 21, 21, 1]\n",
-            "318219 [1, 1, 74, 74, 76, 76, 74, 72, 72, 72, 74]\n",
-            "554625 [72, 72, 1, 1, 1, 72, 74, 74, 76, 76, 76, 72, 74, 74, 1, 1, 72, 74, 76]\n",
-            "Passou no assert de dataset\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -394,24 +373,13 @@
       ],
       "metadata": {
         "id": "iU-z1jb9LJ-q",
-        "outputId": "6a6d888c-e1e5-435f-e7be-377e470483e2",
+        "outputId": "8ae1e387-8531-49df-c158-4387f821c70a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "391895 [4, 1, 1, 2]\n",
-            "522418 [1, 49, 61, 81]\n",
-            "184613 [21, 21, 21, 21, 21, 28, 21, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 21, 21, 21, 1]\n",
-            "318219 [1, 1, 74, 74, 76, 76, 74, 72, 72, 72, 74]\n",
-            "554625 [72, 72, 1, 1, 1, 72, 74, 74, 76, 76, 76, 72, 74, 74, 1, 1, 72, 74, 76]\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -442,7 +410,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 9
         }
       ]
     },
