--- a/projeto_final/fabio_mazza/projeto_final.ipynb
+++ b/projeto_final/fabio_mazza/projeto_final.ipynb
@@ -5620,12 +5620,13 @@
         "\n",
         "from collections import OrderedDict\n",
         "from typing import List\n",
-        "import torchvision.transforms as transforms"
+        "import torchvision.transforms as transforms\n",
+        "import torchvision.models as models"
       ],
       "metadata": {
         "id": "Ck6nHDcbXEHE"
       },
-      "execution_count": 3,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -6128,8 +6129,6 @@
         "test_dataset = MyDataset(img_ids=img_ids_test, coco=coco_inst_val, transformations=transformations, num_cats=num_cats)\n"
       ],
       "metadata": {
-        "id": "cbJXnHvMClIU",
-        "outputId": "0e2ca249-7d34-4557-ddb5-b6e123a1980d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 436,
@@ -6267,7 +6266,9 @@
             "b48b7420cc6e4ce9800517362a2adefa",
             "6a7a4dd8e24145beab5fbcad5087f48a"
           ]
-        }
+        },
+        "id": "cbJXnHvMClIU",
+        "outputId": "0e2ca249-7d34-4557-ddb5-b6e123a1980d"
       },
       "execution_count": 78,
       "outputs": [
@@ -6452,11 +6453,18 @@
     {
       "cell_type": "code",
       "source": [
-        "{all_img_ids_train = coco_inst_train.getImgIds()\n",
-        "all_img_ids_train"
+        "class MultilabelClassifier(nn.Module):\n",
+        "\n",
+        "    def __init__(self, num_cats):\n",
+        "        self.num_cats = num_cats\n",
+        "        self.resnet34 = models.resnet34(pretrained=True)\n",
+        "        self.model_1_wo_fc = nn.Sequential(*(list(resnet34.children())[:-1]))\n",
+        "\n",
+        "        self.classifier = \n",
+        "\n"
       ],
       "metadata": {
-        "id": "FfopZ_BqDu6T"
+        "id": "cKV8f2zbhRiB"
       },
       "execution_count": null,
       "outputs": []
@@ -6464,10 +6472,121 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "resnet34 = models.resnet34(pretrained=True)\n",
+        "model_1 = nn.Sequential(*(list(resnet34.children())[:-1]))"
       ],
       "metadata": {
         "id": "Gc2NaOWfGkKa"
+      },
+      "execution_count": 88,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(model_1.children())[-3:]\n"
+      ],
+      "metadata": {
+        "id": "S2f1eDMNfjgp",
+        "outputId": "b0c2f3fe-7300-43fe-dc93-3a497711a460",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Sequential(\n",
+              "   (0): BasicBlock(\n",
+              "     (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+              "     (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     (relu): ReLU(inplace=True)\n",
+              "     (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     (downsample): Sequential(\n",
+              "       (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+              "       (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     )\n",
+              "   )\n",
+              "   (1): BasicBlock(\n",
+              "     (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     (relu): ReLU(inplace=True)\n",
+              "     (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "   )\n",
+              "   (2): BasicBlock(\n",
+              "     (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     (relu): ReLU(inplace=True)\n",
+              "     (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "   )\n",
+              "   (3): BasicBlock(\n",
+              "     (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     (relu): ReLU(inplace=True)\n",
+              "     (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "   )\n",
+              "   (4): BasicBlock(\n",
+              "     (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     (relu): ReLU(inplace=True)\n",
+              "     (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "   )\n",
+              "   (5): BasicBlock(\n",
+              "     (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     (relu): ReLU(inplace=True)\n",
+              "     (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "   )\n",
+              " ), Sequential(\n",
+              "   (0): BasicBlock(\n",
+              "     (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+              "     (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     (relu): ReLU(inplace=True)\n",
+              "     (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     (downsample): Sequential(\n",
+              "       (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+              "       (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     )\n",
+              "   )\n",
+              "   (1): BasicBlock(\n",
+              "     (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     (relu): ReLU(inplace=True)\n",
+              "     (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "   )\n",
+              "   (2): BasicBlock(\n",
+              "     (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "     (relu): ReLU(inplace=True)\n",
+              "     (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+              "     (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "   )\n",
+              " ), AdaptiveAvgPool2d(output_size=(1, 1))]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "o_9LbD7Hfywo"
       },
       "execution_count": null,
       "outputs": []
