--- a/projeto_final/fabio_mazza/projeto_final_modulo1_wstuff_balanced.ipynb
+++ b/projeto_final/fabio_mazza/projeto_final_modulo1_wstuff_balanced.ipynb
@@ -9377,10 +9377,10 @@
       ],
       "metadata": {
         "id": "oypoMFjjBbnh",
-        "outputId": "3fcb32dc-4298-414a-e4b6-8b20cb71af05",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3fcb32dc-4298-414a-e4b6-8b20cb71af05"
       },
       "execution_count": 3,
       "outputs": [
@@ -9416,10 +9416,10 @@
       ],
       "metadata": {
         "id": "8wMU-yRnyhTI",
-        "outputId": "41c87c2f-d2e3-42e2-ee39-02cdda452ced",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "41c87c2f-d2e3-42e2-ee39-02cdda452ced"
       },
       "execution_count": 4,
       "outputs": [
@@ -9826,11 +9826,11 @@
       ],
       "metadata": {
         "id": "iet9PQyz8QZM",
-        "outputId": "a9275f4b-004e-409d-c6ce-5e0581e7c176",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 303
-        }
+        },
+        "outputId": "a9275f4b-004e-409d-c6ce-5e0581e7c176"
       },
       "execution_count": 11,
       "outputs": [
@@ -10094,12 +10094,12 @@
         "pos_weight.to(device)"
       ],
       "metadata": {
-        "id": "bQiWeikXmB8h",
-        "outputId": "95bb2d34-4549-4a21-8094-d9978df3e9eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 821
-        }
+        },
+        "id": "bQiWeikXmB8h",
+        "outputId": "95bb2d34-4549-4a21-8094-d9978df3e9eb"
       },
       "execution_count": 13,
       "outputs": [
@@ -10920,7 +10920,6 @@
         "    outputs = torch.sigmoid(model_1(inputs))\n",
         "    outputs[outputs >= threshold] = 1.0\n",
         "    n_correct = (outputs == targets).sum()\n",
-        "    print(n_correct)\n",
         "    accuracy = n_correct / targets.sum(dim=1) * 100\n",
         "\n",
         "    return accuracy"
@@ -10928,7 +10927,7 @@
       "metadata": {
         "id": "JMNusEkHbMPE"
       },
-      "execution_count": 34,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -11025,23 +11024,55 @@
     {
       "cell_type": "code",
       "source": [
-        "print(targets.shape)"
+        "for i in range(test_ex_num):\n",
+        "    img, cats = test_dataset[i]\n",
+        "    inputs = img.unsqueeze(dim=0)\n",
+        "    targets = cats.unsqueeze(dim=0)\n",
+        "    accuracy += accuracy_step(inputs.to(device), targets.to(device)) / test_ex_num\n",
+        "  \n",
+        "print(accuracy)"
       ],
       "metadata": {
         "id": "62DPO6w4VJIn",
-        "outputId": "c2a900f9-6c63-4805-f332-65be90056145",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "57e7fdd6-9cb8-41a6-a8d2-d0952d76cfb0"
       },
-      "execution_count": 27,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch.Size([1, 184])\n"
+            "tensor([94.6713], device='cuda:0')\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "accuracy"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qzwHq8VPbFJM",
+        "outputId": "d05344d2-3b0d-404f-bf21-a897740cdd48"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0.0062], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
         }
       ]
     },
@@ -11051,7 +11082,7 @@
         ""
       ],
       "metadata": {
-        "id": "qzwHq8VPbFJM"
+        "id": "Nuk4ABSAfyfi"
       },
       "execution_count": null,
       "outputs": []
